# aolserver

./: BUILD  ChangeLog  INSTALL  LICENSE.txt  Makefile  README  RELEASE  aclocal.m4  configure  configure.in  configure.tcl  full-config.tcl  index.adp  index.html  ini2tcl.tcl  install-sh  license.terms  nsconfig.tcl  nspostgres.c  readme.txt  sample-config.tcl
compat/: osx.c  poll.h
doc/: Makefile  Ns_Adp.3  Ns_Alloc.3  Ns_Auth.3  Ns_Cache.3  Ns_Cls.3  Ns_Cond.3  Ns_Config.3  Ns_Conn.3  Ns_ConnClose.3  Ns_ConnContent.3  Ns_ConnCopy.3  Ns_ConnDriver.3  Ns_ConnFlush.3  Ns_ConnHeaders.3  Ns_ConnQuery.3  Ns_ConnQueueHeaders.3  Ns_ConnRead.3  Ns_ConnRedirect.3  Ns_ConnRequest.3  Ns_ConnReturn.3  Ns_ConnReturnData.3  Ns_ConnReturnFile.3  Ns_ConnReturnOpen.3  Ns_ConnReturnStatus.3  Ns_ConnSend.3  Ns_ConnSetHeaders.3  Ns_ConnStatus.3  Ns_ConnType.3  Ns_ConnWrite.3  Ns_CritSec.3  Ns_DString.3  Ns_Db.3  Ns_DbDriver.3  Ns_DbPool.3  Ns_DbSp.3  Ns_DbUtil.3  Ns_Driver.3  Ns_Encoding.3  Ns_Encrypt.3  (+157 more)
examples/config/: README  base.tcl  nscp.tcl  stats.tcl
examples/mynsd/: Makefile  README  mynsd.c
include/: Makefile.build  Makefile.global  Makefile.global.in  Makefile.library  Makefile.module  Makefile.module.in  Makefile.win32  man.macros  ns-mak.inc  ns.h  ns.mak.in  nsattributes.h  nsdb.h  nsextmsg.h  nslibinit.c  nsmodinit.c  nspd.h  nsthread.h  tcl.h  tcl82.h  tcl83.h  tclDecls.h
nsbonjour/: Makefile  README  nsbonjour.c  test.tcl
nscgi/: Makefile  nscgi.c  nscgi.html
nscp/: Makefile  nscp.c  nscp.html
nsd/: Makefile  adp.c  adpcmds.c  adpeval.c  adpfancy.c  adpparse.c  adprequest.c  auth.c  binder.c  cache.c  callbacks.c  cls.c  compat.c  compress.c  cond.c  config.c  conn.c  connio.c  crypt.c  cslock.c  dbdrv.c  dbinit.c  dbtcl.c  dbutil.c  dns.c  driver.c  drv.c  dsprintf.c  dstring.c  encoding.c  error.c  exec.c  fastpath.c  fd.c  filter.c  fork.c  form.c  getopt.c  httptime.c  htuu.c  (+95 more)
nsdb/: Makefile  db.h  dbdrv.c  dbinit.c  dbtcl.c  dbutil.c  nsdb.c
nsexample/: Makefile  nsexample.c
nsext/: Makefile  msg.c  nsext.c  nsext.html  nsextmsg.c  nsextmsg.h
nsingres/: INSTALL  Makefile  README  nsingres.ec
nslog/: Makefile  nslog.c  nslog.html
nsmain/: Makefile  init.tcl  main.c  sample-config.tcl  tcl2ini.tcl
nsosx/: Makefile  README  nsosx.c
nspd/: Makefile  listen.c  log.c  main.c  msg.c  nspd.html  pd.h
nsperm/: Makefile  compat.tcl  group  hosts.allow  hosts.deny  init.tcl  nsperm.c  nsperm.html  passwd  perms
nsproxy/: Makefile  ns_proxy.n  nsproxy.c  nsproxy.h  nsproxylib.c  nsproxymod.c
nssock/: Makefile  Makefile.sock  Makefile.ssl  certfile-sample.pem  certfile.pem  keyfile-sample.pem  keyfile.pem  keygen.tcl  nssock.c  nssock.html  nsssl.html  nsssl.txt  sock.c  sock.cpp  ssl.c  ssl.h  ssltcl.c  t_stdlib.c  x509.c
nsssl/: Makefile  certfile-sample.pem  keyfile-sample.pem  keygen.tcl  nsssl.c  nsssl.html  sock.cpp  ssl.c  ssl.h  ssltcl.c  ssltcl.h  t_stdlib.c  x509.c  x509.h
nstclsh/: Makefile  nstclsh.c
nsthread/: Makefile  compat.c  cond.c  cslock.c  error.c  fork.c  master.c  memory.c  mutex.c  nsthreadtest.c  osxcompat.c  osxcompat.h  pthread.c  reentrant.c  rwlock.c  sema.c  signal.c  thread.c  thread.h  time.c  tls.c  winthread.c
nszlib/: ChangeLog  Makefile  README  example.tcl  ns_zlib.n  nszlib.c  nszlib.h
stats/: cache.adp  cache.inc  commands.adp  commands.inc  header.inc  index.adp  locks.adp  locks.inc  log.adp  log.inc  main.inc  mempools.adp  mempools.inc  process.adp  process.inc  sched.adp  sched.inc  threads.adp  threads.inc  url.adp  url.inc
stats/inc/: header.inc  msg.inc  results.inc
tcl/: adp.tcl  charsets.tcl  compat.tcl  debug.tcl  fastpath.tcl  file.tcl  form.tcl  http.tcl  init.tcl  modlog.tcl  namespace.tcl  nsdb.tcl  packages.tcl  pools.tcl  prodebug.tcl  return.tcl  sendmail.tcl  stats.tcl  tcl.html  util.tcl
tcl7.6/: Makefile  README-aolserver.txt
tcl7.6/compat/: dirent.h  dirent2.h  dlfcn.h  fixstrtod.c  float.h  getcwd.c  gettod.c  limits.h  opendir.c  stdlib.h  strftime.c  string.h  strncasecmp.c  strstr.c  strtod.c  strtol.c  strtoul.c  tclErrno.h  tmpnam.c  unistd.h  waitpid.c
tcl7.6/generic/: panic.c  regexp.c  tcl.h  tclAsync.c  tclBasic.c  tclCkalloc.c  tclClock.c  tclCmdAH.c  tclCmdIL.c  tclDate.c  tclEnv.c  tclEvent.c  tclExpr.c  tclFCmd.c  tclFHandle.c  tclFileName.c  tclGet.c  tclGetDate.y  tclHistory.c  tclIO.c  tclIOCmd.c  tclIOSock.c  tclIOUtil.c  tclInt.h  tclInterp.c  tclLink.c  tclLoad.c  tclLoadNone.c  tclMain.c  tclNotify.c  tclPatch.h  tclPkg.c  tclPosixStr.c  tclPreserve.c  tclTest.c  tclVar.c  tclVar.c-
tcl7.6/unix/: Makefile.in  README  configure  configure.in  mkLinks  tclAppInit.c  tclConfig.sh.in  tclLoadAix.c  tclLoadAout.c  tclLoadDl.c  tclLoadDl2.c  tclLoadDld.c  tclLoadNext.c  tclLoadOSF.c  tclLoadShl.c  tclMtherr.c  tclUnixChan.c  tclUnixFCmd.c  tclUnixFile.c  tclUnixInit.c  tclUnixNotfy.c  tclUnixPipe.c  tclUnixPort.h  tclUnixSock.c  tclUnixTest.c  tclUnixTime.c
tcl8.3.4/: Makefile  README  changes
tcl8.3.4/compat/: README  dirent.h  dirent2.h  dlfcn.h  fixstrtod.c  float.h  gettod.c  limits.h  opendir.c  stdlib.h  strftime.c  string.h  strncasecmp.c  strstr.c  strtod.c  strtol.c  strtoul.c  tclErrno.h  tmpnam.c  unistd.h  waitpid.c
tcl8.3.4/doc/: Access.3  AddErrInfo.3  Alloc.3  AllowExc.3  AppInit.3  AssocData.3  Async.3  BackgdErr.3  Backslash.3  BoolObj.3  ByteArrObj.3  CallDel.3  ChnlStack.3  CmdCmplt.3  Concat.3  CrtChannel.3  CrtChnlHdlr.3  CrtCloseHdlr.3  CrtCommand.3  CrtFileHdlr.3  CrtInterp.3  CrtMathFnc.3  CrtObjCmd.3  CrtSlave.3  CrtTimerHdlr.3  CrtTrace.3  DString.3  (+154 more)
tests/: README-tests.txt  index.adp  nstelemetry.adp  tests.html
thread/: Makefile  compat.c  cond.c  cs.c  cthread.cpp  debug.c  error.c  fork.c  master.c  memory.c  mutex.c  oldpools.c  osthread.c  pool.c  pthread.cpp  reentrant.c  rwlock.c  sema.c  signal.c  sproc.cpp  tcl8x.c  test.c  thread.c  thread.h  thread.html  time.c  tls.c  win32.cpp  windir.cpp
util/: nsinstall-man.sh  nsinstall.tcl  nsmakeall.tcl  nsremove.tcl
win32/: README  aolserver.dsw  build.tcl  win32.html
(+421 files in other folders)
